--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,5 +18,5 @@ main:
 #  - title: "CV"
 #    url: /cv/
     
-  - title: "Guia de Instalação"
+  - title: "Guia de Instalação - OPLA-Tool"
     url: /markdown/
