Adjustement of menu

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,5 +18,5 @@ main:
   - title: "Researchers"
     url: /cv/
     
-  - title: "Guia de Instalação - OPLA-Tool"
+  - title: "OPLA-Tool"
     url: /markdown/
